--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Font Awesome -->
-
+    <script
+      src="https://kit.fontawesome.com/a29573b667.js"
+      crossorigin="anonymous"
+    ></script>
     <title>World Cup</title>
   </head>
   <body>
@@ -18,10 +21,233 @@
       <!-- Start Banner -->
       <section>
         <div class="container">
-            
+          <div class="banner-wrapper">
+            <div class="single-col">
+              <h1 class="banner-title">The Greatest show on the earth</h1>
+              <p>
+                The biggest and the most famous international tournament of
+                Football is The World Cup which is organized by FIFA. This
+                competition takes place once in every four years. There are
+                approximately 190 to 200 national teams competing to qualify in
+                this tournament.
+              </p>
+              <button href="#" class="watch-live">
+                Watch Live <span><i class="fa-solid fa-greater-than"></i></span>
+              </button>
+            </div>
+            <div class="single-col">
+              <img src="assets/Banner-image.png" alt="" />
+            </div>
+          </div>
         </div>
       </section>
       <!-- End Banner -->
+
+      <!-- Start Blog Section -->
+      <section class="container">
+        <div class="blog-wrapper">
+          <div class="blog-sidebar">
+            <div class="blog-indicator">
+              <button>Upcoming Match</button>
+              <button>All Group</button>
+              <button>Blog</button>
+            </div>
+          </div>
+          <div class="blog-card-wrapper">
+            <div class="blog-card">
+              <div class="thumbnail">
+                <img src="assets/Blog Image.png" alt="" />
+              </div>
+              <div class="card-content">
+                <button>Transfer</button>
+                <p>Transfer Live: Chelsea in talks over Kimpembe transfer</p>
+                <div class="blog-card-info">
+                  <div class="blog-time">
+                    <i class="fa-regular fa-clock"></i>
+                    10h
+                  </div>
+                  <div class="blog-comment">
+                    <i class="fa-brands fa-rocketchat"></i>
+                    23
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="thumbnail">
+                <img src="assets/Blog Image.png" alt="" />
+              </div>
+              <div class="card-content">
+                <button>Transfer</button>
+                <p>Transfer Live: Chelsea in talks over Kimpembe transfer</p>
+                <div class="blog-card-info">
+                  <div class="blog-time">
+                    <i class="fa-regular fa-clock"></i>
+                    10h
+                  </div>
+                  <div class="blog-comment">
+                    <i class="fa-brands fa-rocketchat"></i>
+                    23
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="thumbnail">
+                <img src="assets/Blog Image.png" alt="" />
+              </div>
+              <div class="card-content">
+                <button>Transfer</button>
+                <p>Transfer Live: Chelsea in talks over Kimpembe transfer</p>
+                <div class="blog-card-info">
+                  <div class="blog-time">
+                    <i class="fa-regular fa-clock"></i>
+                    10h
+                  </div>
+                  <div class="blog-comment">
+                    <i class="fa-brands fa-rocketchat"></i>
+                    23
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="thumbnail">
+                <img src="assets/Blog Image.png" alt="" />
+              </div>
+              <div class="card-content">
+                <button>Transfer</button>
+                <p>Transfer Live: Chelsea in talks over Kimpembe transfer</p>
+                <div class="blog-card-info">
+                  <div class="blog-time">
+                    <i class="fa-regular fa-clock"></i>
+                    10h
+                  </div>
+                  <div class="blog-comment">
+                    <i class="fa-brands fa-rocketchat"></i>
+                    23
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="thumbnail">
+                <img src="assets/Blog Image.png" alt="" />
+              </div>
+              <div class="card-content">
+                <button>Transfer</button>
+                <p>Transfer Live: Chelsea in talks over Kimpembe transfer</p>
+                <div class="blog-card-info">
+                  <div class="blog-time">
+                    <i class="fa-regular fa-clock"></i>
+                    10h
+                  </div>
+                  <div class="blog-comment">
+                    <i class="fa-brands fa-rocketchat"></i>
+                    23
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="thumbnail">
+                <img src="assets/Blog Image.png" alt="" />
+              </div>
+              <div class="card-content">
+                <button>Transfer</button>
+                <p>Transfer Live: Chelsea in talks over Kimpembe transfer</p>
+                <div class="blog-card-info">
+                  <div class="blog-time">
+                    <i class="fa-regular fa-clock"></i>
+                    10h
+                  </div>
+                  <div class="blog-comment">
+                    <i class="fa-brands fa-rocketchat"></i>
+                    23
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="thumbnail">
+                <img src="assets/Blog Image.png" alt="" />
+              </div>
+              <div class="card-content">
+                <button>Transfer</button>
+                <p>Transfer Live: Chelsea in talks over Kimpembe transfer</p>
+                <div class="blog-card-info">
+                  <div class="blog-time">
+                    <i class="fa-regular fa-clock"></i>
+                    10h
+                  </div>
+                  <div class="blog-comment">
+                    <i class="fa-brands fa-rocketchat"></i>
+                    23
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="thumbnail">
+                <img src="assets/Blog Image.png" alt="" />
+              </div>
+              <div class="card-content">
+                <button>Transfer</button>
+                <p>Transfer Live: Chelsea in talks over Kimpembe transfer</p>
+                <div class="blog-card-info">
+                  <div class="blog-time">
+                    <i class="fa-regular fa-clock"></i>
+                    10h
+                  </div>
+                  <div class="blog-comment">
+                    <i class="fa-brands fa-rocketchat"></i>
+                    23
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="thumbnail">
+                <img src="assets/Blog Image.png" alt="" />
+              </div>
+              <div class="card-content">
+                <button>Transfer</button>
+                <p>Transfer Live: Chelsea in talks over Kimpembe transfer</p>
+                <div class="blog-card-info">
+                  <div class="blog-time">
+                    <i class="fa-regular fa-clock"></i>
+                    10h
+                  </div>
+                  <div class="blog-comment">
+                    <i class="fa-brands fa-rocketchat"></i>
+                    23
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Blog Section -->
+
+      <!-- Start Footer Section -->
+      <footer>
+        <h1>Goal</h1>
+        <div class="container">
+          <hr />
+          <nav>
+            <ul>
+              <li><a href="#">Contact Us </a></li>
+              <li><a href="#">Terms of Service </a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Privacy Settings</a></li>
+              <li><a href="#">Goal App</a></li>
+              <li><a href="#">Goal Live</a></li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
+      <!-- End Footer Section -->
     </main>
   </body>
 </html>
