--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <div class="blog-wrapper">
           <div class="blog-sidebar">
             <div class="blog-indicator">
-              <button>Upcoming Match</button>
-              <button>All Group</button>
-              <button>Blog</button>
+              <a href="upcoming.html">Upcoming Match</a>
+              <a href="">All Group</a>
+              <a href="#blog-part" class="active">Blog</a>
             </div>
           </div>
-          <div class="blog-card-wrapper">
+          <div class="blog-card-wrapper" id="blog-part">
             <div class="blog-card">
               <div class="thumbnail">
                 <img src="assets/Blog Image.png" alt="" />
@@ -225,6 +225,10 @@
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="view-all">
+            <button href="#" class="watch-live">View All</button>
           </div>
         </div>
       </section>
@@ -245,6 +249,22 @@
               <li><a href="#">Goal Live</a></li>
             </ul>
           </nav>
+          <div class="social-icon">
+            <span
+              ><a href="https://www.facebook.com/shihabcumilla" target="_blank"
+                ><i class="fa-brands fa-facebook-square"></i></a
+            ></span>
+            <span
+              ><a href="https://twitter.com/Wordpress5010" target="_blank"
+                ><i class="fa-brands fa-twitter"></i></a
+            ></span>
+            <span
+              ><a
+                href="https://www.linkedin.com/in/shihabcumilla/"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin"></i></a
+            ></span>
+          </div>
         </div>
       </footer>
       <!-- End Footer Section -->
