--- a/upcoming.html
+++ b/upcoming.html
@@ -14,7 +14,7 @@
       src="https://kit.fontawesome.com/a29573b667.js"
       crossorigin="anonymous"
     ></script>
-    <title>World Cup</title>
+    <title>Upcoming Match</title>
   </head>
   <body>
     <main>
@@ -48,20 +48,97 @@
         <div class="blog-wrapper">
           <div class="blog-sidebar">
             <div class="blog-indicator">
-              <button>Upcoming Match</button>
-              <button>All Group</button>
-              <button>Blog</button>
+                <a href="upcoming.html" class="active">Upcoming Match</a>
+                <a href="">All Group</a>
+                <a href="">Blog</a>
             </div>
           </div>
           <div class="upcoming-match-wrapper">
-            
+            <div class="upcoming-match-card">
+              <div class="match-region">
+                <div class="flag">
+                  <img src="assets/germany Flag.png" alt="" />
+                </div>
+                <p>VS</p>
+                <div class="flag"><img src="assets//Flag.png" alt="" /></div>
+              </div>
+              <div class="upcoming-match-content">
+                <h2>Germany VS France</h2>
+                <p>April 01, 2023, 1.00 AM</p>
+              </div>
+            </div>
+            <div class="upcoming-match-card">
+              <div class="match-region">
+                <div class="flag">
+                  <img src="assets/germany Flag.png" alt="" />
+                </div>
+                <p>VS</p>
+                <div class="flag"><img src="assets//Flag.png" alt="" /></div>
+              </div>
+              <div class="upcoming-match-content">
+                <h2>Germany VS France</h2>
+                <p>April 01, 2023, 1.00 AM</p>
+              </div>
+            </div>
+            <div class="upcoming-match-card">
+              <div class="match-region">
+                <div class="flag">
+                  <img src="assets/germany Flag.png" alt="" />
+                </div>
+                <p>VS</p>
+                <div class="flag"><img src="assets//Flag.png" alt="" /></div>
+              </div>
+              <div class="upcoming-match-content">
+                <h2>Germany VS France</h2>
+                <p>April 01, 2023, 1.00 AM</p>
+              </div>
+            </div>
+            <div class="upcoming-match-card">
+              <div class="match-region">
+                <div class="flag">
+                  <img src="assets/germany Flag.png" alt="" />
+                </div>
+                <p>VS</p>
+                <div class="flag"><img src="assets//Flag.png" alt="" /></div>
+              </div>
+              <div class="upcoming-match-content">
+                <h2>Germany VS France</h2>
+                <p>April 01, 2023, 1.00 AM</p>
+              </div>
+            </div>
+            <div class="upcoming-match-card">
+              <div class="match-region">
+                <div class="flag">
+                  <img src="assets/germany Flag.png" alt="" />
+                </div>
+                <p>VS</p>
+                <div class="flag"><img src="assets//Flag.png" alt="" /></div>
+              </div>
+              <div class="upcoming-match-content">
+                <h2>Germany VS France</h2>
+                <p>April 01, 2023, 1.00 AM</p>
+              </div>
+            </div>
+            <div class="upcoming-match-card">
+              <div class="match-region">
+                <div class="flag">
+                  <img src="assets/germany Flag.png" alt="" />
+                </div>
+                <p>VS</p>
+                <div class="flag"><img src="assets//Flag.png" alt="" /></div>
+              </div>
+              <div class="upcoming-match-content">
+                <h2>Germany VS France</h2>
+                <p>April 01, 2023, 1.00 AM</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
       <!-- End Blog Section -->
 
-      <!-- Start Footer Section -->
-      <footer>
+     <!-- Start Footer Section -->
+     <footer>
         <h1>Goal</h1>
         <div class="container">
           <hr />
@@ -75,6 +152,19 @@
               <li><a href="#">Goal Live</a></li>
             </ul>
           </nav>
+          <div class="social-icon">
+            <span
+              ><a href="https://www.facebook.com/shihabcumilla"
+                target="_blank"><i class="fa-brands fa-facebook-square"></i></a
+            ></span>
+            <span
+              ><a href="https://twitter.com/Wordpress5010"target="_blank"><i class="fa-brands fa-twitter"></i></a
+            ></span>
+            <span
+              ><a href="https://www.linkedin.com/in/shihabcumilla/"
+                target="_blank"><i class="fa-brands fa-linkedin"></i></a
+            ></span>
+          </div>
         </div>
       </footer>
       <!-- End Footer Section -->
